--- a/styles/header.css
+++ b/styles/header.css
@@ -77,6 +77,7 @@ nav{
 .head__desplegable{
     background:rgb(255, 255, 255);
     position: absolute;
+    z-index: 1000;
     height: minmax(614px,content);
     width: 100%;
 }
